--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ img {
 #modal-popup {
 	top: 300px;
 	width: 300px;
-	background color: black;
+	background-color: black;
 	z-index: 200;
 	position: fixed;
 }
