--- a/style.css
+++ b/style.css
@@ -48,60 +48,57 @@ input, select { vertical-align: middle; }
 
 
 /* Write your CSS styles here */
+
 html { 
-  background: cornflowerblue no-repeat center center fixed; 
-  -webkit-background-size: cover;
+  background: url(../images/Skillcrush_Computer.jpg); 
+  background-position: center;
+  background-attachment: fixed;
+  -webkit-background-size: cover; 
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-    
+
+}
+
+body {
+  color: #252525;
+  font-family: Bitter, serif;
+  font-size: 16.5px;
+}
+
+#container {
+  background: rgba(255, 255, 255, 0.9);
+
+  float: right;
+  margin-top: 40px;
+  width: 380px;
+  height: 550px;
+  padding: 5px 0px 10px 20px;
+  border-bottom-left-radius:5px;
+  border-top-left-radius:5px; 
+  overflow: auto;
 }
 
 h1 {
-	color: white;
-	font-weight: bold;
-	font-family: 'Bitter';
+  font-size: 65px;
+  line-height: .8;
+  margin: 30px 0px 30px 4px;
 }
 
-#main {
-	color: white;
-}
-
-#summary {
-	color: mistyrose;
-}
-
-.enjoy {
-	color: linen;
-	font-family: 'Bitter';
-}
-
-.captions {
-	color: honeydew;
+h3 {
+  color: white;
+  background: #CFC6C2;
+  border-bottom-left-radius: 5px;
+  padding: 10px;
+  margin: 15px 0 15px;
+  font-size: 19px;
+  letter-spacing: 1.25px;
+  font-weight: lighter;
 }
 
 p {
-    font-family: 'Bitter';
-    height: 50px;
-    width: 1100px;
-}
-
-img {
-    border: 9px solid black;
-    height: 400px;
-    width: 600px;
-    padding: 5px;
-        
-}
-
-#social {
-	color:floralwhite;
-	font-family: 'Bitter';
-}
-
-#modal-popup {
-	top: 300px;
-	width: 300px;
-	z-index: 200;
-	position: fixed;
+  color: #3b3b3b;
+  padding: 10px 20px 0 7px;
+  line-height: 25px;
+  margin: 0;
 }
